Better enclosure tokinization, encoding support, a new cheetah.node.call() factory method.

--- a/refactorlib/tests/cheetah/parse_data/continuation.tmpl
+++ b/refactorlib/tests/cheetah/parse_data/continuation.tmpl
@@ -1,8 +1,15 @@
 
 #set $mylist =  [
 		1,
-		2,
+		{
+			2: 'two',
+		},
 		3,
+		(
+			"four score and seven"
+			"years ago"
+		)
 ]
 
-$mylist
+$("foo")
+
