Tabs are delicious, and no one was guarding them.  Woof.

--- a/refactorlib/tests/cheetah/parse_data/nested2.tmpl
+++ b/refactorlib/tests/cheetah/parse_data/nested2.tmpl
@@ -1,1 +1,13 @@
-../remove_call_data/nested2.tmpl
+
+$bar($foo(buz))
+$bar($foo($buz))
+$bar($foo(
+    buz
+))
+$bar($foo(
+    $buz
+))
+$bar(
+    $foo($buz)
+)
+
