--- a/refactorlib/tests/cheetah/parse_data/nested_call.tmpl
+++ b/refactorlib/tests/cheetah/parse_data/nested_call.tmpl
@@ -1,1 +1,12 @@
-../remove_call_data/nested.tmpl
+
+$concat(
+    $_( "$BLERG $BAZ", BLERG=$foo('buz'), BAZ=$foo('quux') ),
+    $_( "$BLERG $BAZ", BLERG=$foo(
+                'buz'
+            ), BAZ=$foo(
+                'quux'
+            ),
+    ),
+    $foo(bar),
+)
+
