--- a/refactorlib/tests/cheetah/parse_data/multiline.tmpl
+++ b/refactorlib/tests/cheetah/parse_data/multiline.tmpl
@@ -1,1 +1,14 @@
-../remove_call_data/multiline.tmpl
+        foo $foo(
+        ) bar
+        foo $foo(
+            dotted.name
+        ) bar
+        foo $foo(
+            $cheetahvar
+        ) bar
+        foo $foo(
+            $cheetah.var
+        ) bar
+        foo $foo(
+            x.upper() for x in mylist
+        ) bar
