--- a/refactorlib/tests/cheetah/parse_data/nested.tmpl
+++ b/refactorlib/tests/cheetah/parse_data/nested.tmpl
@@ -1,1 +1,15 @@
-../directive_data/nested.tmpl
+
+before biggun
+#def biggun
+    before foo1
+    #def foo1
+        foo1!
+    #end def foo1
+    between
+    #def foo2
+        foo2!
+    #end def
+    after foo2
+#end def biggun
+after biggun
+
