--- a/refactorlib/tests/cheetah/parse_data/simple.tmpl
+++ b/refactorlib/tests/cheetah/parse_data/simple.tmpl
@@ -1,1 +1,16 @@
-../directive_data/simple.tmpl
+
+
+#def foo1
+    foo1!
+#end def foo1
+
+## The specifier on the #end def is optional
+#def foo2
+    foo2!
+#end def
+
+## You're also allowed to put extra crap on the #end
+#def foo1
+    foo1!
+#end def foo1 blah blah blah
+
