Upgrade to yelp-cheetah 0.3.x

--- a/tests/cheetah/directive_data/test_replace_directive/nested.tmpl
+++ b/tests/cheetah/directive_data/test_replace_directive/nested.tmpl
@@ -1,12 +1,12 @@
 
 before biggun
-#{{{def}}} [biggun]
+#{{{def}}} [biggun]()
     before foo1
-    #{{{def}}} [foo1]
+    #{{{def}}} [foo1]()
         foo1!
     #end {{{def}}}
     between
-    #{{{def}}} [foo2]
+    #{{{def}}} [foo2]()
         foo2!
     #end {{{def}}}
     after foo2
