--- a/tests/cheetah/directive_data/test_replace_directive/simple.tmpl
+++ b/tests/cheetah/directive_data/test_replace_directive/simple.tmpl
@@ -1,16 +1,16 @@
 
 
-#{{{def}}} [foo1]
+#{{{def}}} [foo1]()
     foo1!
 #end {{{def}}}
 
 ## The specifier on the #end def is optional
-#{{{def}}} [foo2]
+#{{{def}}} [foo2]()
     foo2!
 #end {{{def}}}
 
 ## You're also allowed to put extra crap on the #end
-#{{{def}}} [foo1]
+#{{{def}}} [foo1]()
     foo1!
 #end {{{def}}}
 
