--- a/tests/cheetah/parse_data/complex_call.tmpl
+++ b/tests/cheetah/parse_data/complex_call.tmpl
@@ -1,5 +1,5 @@
 
     X
-    $MyFunc(arg1, $arg2, "arg3", arg4="ARG4", $arg5="ARG5")
+    $MyFunc(arg1, $arg2, "arg3", arg4="ARG4", arg5="ARG5")
     Y
 
