Forward compat for yelp-cheetah 11

--- a/tests/cheetah/parse_data/all_directives.tmpl
+++ b/tests/cheetah/parse_data/all_directives.tmpl
@@ -1,5 +1,5 @@
 #compiler-settings
-useDottedNotation = True
+useLegacyImportMode = True
 #end compiler-settings
 #extends testing.templates.extends_test_template
 #implements respond
