--- a/tests/cheetah/parse_data/all_directives.tmpl
+++ b/tests/cheetah/parse_data/all_directives.tmpl
@@ -53,7 +53,7 @@ Hello world
 #end call
 
 
-#set foo = {"a": 1}
+#py foo = {"a": 1}
 #del foo['a']
 $foo
 
@@ -72,8 +72,8 @@ $spacer()
    not 15 or 16
 #end if
 
-#set arr = [1, 2, 3]
-#silent arr.append(4)
+#py arr = [1, 2, 3]
+#py arr.append(4)
 $arr
 
 #block infinite_loop_meybs
