--- a/tests/cheetah/parse_data/example1.tmpl
+++ b/tests/cheetah/parse_data/example1.tmpl
@@ -9,7 +9,7 @@
 #@mydecorator2
 #def myfunc(myarg="mystring"):
     ## "This is a docstring for myfunc"
-    #set myvar = $myarg.upper()
+    #py myvar = $myarg.upper()
     #return $myvar
 #end def
 
