Support yelp-cheetah 0.16.x

--- a/tests/cheetah/remove_call_data/test_can_remove_calls/nested.tmpl
+++ b/tests/cheetah/remove_call_data/test_can_remove_calls/nested.tmpl
@@ -3,6 +3,6 @@ $concat(
     $_( "$BLERG $BAZ", BLERG='buz', BAZ='quux' ),
     $_( "$BLERG $BAZ", BLERG='buz', BAZ='quux',
     ),
-    $bar,
+    bar,
 )
 
