--- a/tests/cheetah/remove_call_data/test_can_remove_calls/simple.tmpl
+++ b/tests/cheetah/remove_call_data/test_can_remove_calls/simple.tmpl
@@ -1,5 +1,9 @@
         foo  bar
-        foo $dotted.name bar
+        foo text bar
+        foo text bar
+        foo text bar
+        foo  bar
+        foo ${dotted.name} bar
         foo $cheetahvar bar
         foo $cheetah.var bar
-        foo $(x.upper() for x in mylist) bar
+        foo ${x.upper() for x in mylist} bar
