--- a/tests/cheetah/remove_call_data/simple.tmpl
+++ b/tests/cheetah/remove_call_data/simple.tmpl
@@ -1,4 +1,8 @@
         foo $foo() bar
+        foo $foo("""text""") bar
+        foo $foo("text") bar
+        foo $foo('text') bar
+        foo $foo('') bar
         foo $foo(dotted.name) bar
         foo $foo($cheetahvar) bar
         foo $foo($cheetah.var) bar
