run pyupgrade against the source

--- a/tests/cheetah/directive_data/test_replace_directive/single-line.tmpl
+++ b/tests/cheetah/directive_data/test_replace_directive/single-line.tmpl
@@ -1,5 +1,5 @@
 
-#{{{def}}} [foo1](): #{{{}}}return "foo1"
+#[[[def]]] [foo1](): #[[[]]]return "foo1"
 
-#{{{def}}} [foo2](): foo2
+#[[[def]]] [foo2](): foo2
 
